k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
  namespace: sysviewer
spec:
  type: ClusterIP
  selector:
    component: app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
