k8s/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-service
  namespace: sysviewer
spec:
  type: NodePort
  selector:
    component: app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32443
